--- a/styles/index.css
+++ b/styles/index.css
@@ -29,7 +29,7 @@ header{
 }
 
 #background{
-    background-image: url(background.png);
+    background-image: url('background.png');
     background-repeat:no-repeat;
     background-size: cover;
     min-height: 100vh;
