--- a/fonts/font.css
+++ b/fonts/font.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'micro5';
     src: url('../fonts/Micro5-Regular.woff') format('woff'),
-    url('../fonts/Micro5-Regular.woff2') format('woff2'),
+    url('../fonts/Micro5-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -10,7 +10,7 @@
 @font-face {
     font-family: 'stardew';
     src: url('../fonts/StardewValley.woff') format('woff'),
-    url('../fonts/Micro5-Regular.woff2') format('woff2'),
+    url('../fonts/Micro5-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -19,7 +19,7 @@
 @font-face {
     font-family: 'jersey';
     src: url('../fonts/Jersey15-Regular.woff') format('woff'),
-    url('../fonts/Jersey15-Regular.woff2') format('woff2'),
+    url('../fonts/Jersey15-Regular.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
