--- a/styles/index.css
+++ b/styles/index.css
@@ -111,7 +111,6 @@ header{
     justify-content: center;
     align-items: center;
     border-radius: 15px;
-    width: ;
     border-radius: 15px;
     img{
         border-radius: 15px;
@@ -284,8 +283,8 @@ a:hover{
         img{
             border-radius: 15px;
             margin-bottom: 15px;
-            height:200px
-            width:auto;
+            height:200px;
+            width: auto;
         }
     }
     .carrosselBox  h2{
