--- a/styles/index.css
+++ b/styles/index.css
@@ -146,9 +146,6 @@ h2{
     font-size: 28px;
 }
   
-#link{
-    text-align: center;
-}
   
 a{
     text-align: center;
@@ -169,6 +166,13 @@ a{
     margin: auto;
     margin-bottom: 0px;
     margin-top: 0px;
+}
+.caixaDev{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+
 }
 
 /*footer{
