--- a/styles/index.css
+++ b/styles/index.css
@@ -268,6 +268,7 @@ footer {
         display: flex;
         flex-direction: column;
         margin: 0;
+        height:100vh;
     }
 
     body, html {
